--- a/netlify.toml
+++ b/netlify.toml
@@ -7,9 +7,22 @@
   NODE_VERSION = "18"
 
 [[redirects]]
+  from = "/api/shows/*"
+  to = "/.netlify/functions/api/shows/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/api/shows"
+  to = "/.netlify/functions/api/shows"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
