--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,13 @@
 [build.environment]
   NODE_VERSION = "18"
 
+[dev]
+  command = "npm run dev"
+  targetPort = 3000
+  port = 8888
+  publish = "dist"
+  functionsPort = 8888
+
 [[redirects]]
   from = "/api/shows/*"
   to = "/.netlify/functions/api/shows/:splat"
